--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,8 @@ yarn-error.log
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/terminals.json
 .history/*
 
 # Miscellaneous
